package rec.gui;

message PanelProto {
  enum Orientation {
    HORIZONTAL = 0;
    VERTICAL = 1;
  };

  optional Orientation orientation = 1;
  optional bool resize_other_dimension = 2 [default = true];
  optional bool is_main = 3;
  optional bool is_opaque = 4;
};